--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
+    "ts-standard": "^12.0.2",
     "typescript": "^5"
   }
 }
