--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5"
